2025-12-24T01:01:17Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/20475249702 # 848
* notice: Stats Output Repository: https://github.com/andry81-stats/andry81--gh-stats/commits?branch=master&time_zone=utc&until=2025-12-24
* notice: last 14d: unq all: 12 12
* notice: prev accum: outdated-unq outdated-all / unq all: 415 589 / 430 604
* notice: next accum: outdated-unq outdated-all / unq all: 418 592 / 430 604
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2025-12-09] / []

2025-12-23T01:01:33Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/20448230518 # 847
* notice: Stats Output Repository: https://github.com/andry81-stats/andry81--gh-stats/commits?branch=master&time_zone=utc&until=2025-12-23
* notice: last 14d: unq all: 14 14
* notice: prev accum: outdated-unq outdated-all / unq all: 415 589 / 429 603
* notice: next accum: outdated-unq outdated-all / unq all: 415 589 / 430 604
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -1 -1 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2025-12-09 2025-12-22]

2025-12-21T01:06:05Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/20402559148 # 845
* notice: Stats Output Repository: https://github.com/andry81-stats/andry81--gh-stats/commits?branch=master&time_zone=utc&until=2025-12-21
* notice: last 14d: unq all: 14 14
* notice: prev accum: outdated-unq outdated-all / unq all: 415 589 / 427 601
* notice: next accum: outdated-unq outdated-all / unq all: 415 589 / 429 603
* notice: prev exec diff / last date diff / accum: unq all: +2 +2 -0 -0 / +2 +2 -0 -0 / 2 2
* notice: removed / changed dates: [] / [2025-12-20]

2025-12-20T00:58:03Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/20386617365 # 844