@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2025-12-24T01:01:17Z",
-  "count_outdated" : 592,
-  "uniques_outdated" : 418,
+  "timestamp" : "2025-12-25T01:01:32Z",
+  "count_outdated" : 593,
+  "uniques_outdated" : 419,
   "count" : 604,
   "uniques" : 430,
   "clones" : [
-    {
-      "timestamp": "2025-12-10T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2025-12-12T00:00:00Z",
       "count": 1,
