@@ -1,12 +1,7 @@
 {
-  "count": 12,
-  "uniques": 12,
+  "count": 11,
+  "uniques": 11,
   "clones": [
-    {
-      "timestamp": "2025-12-10T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
     {
       "timestamp": "2025-12-12T00:00:00Z",
       "count": 1,
